<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="168dp"
    tools:layout_editor_absoluteY="-8dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txtTitulo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtBox1"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/txtTitulo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtBox2"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/txtResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toEndOf="@+id/boton"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/boton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:onClick="Checks3"
        android:text="@string/btnSumar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="122dp"
        android:layout_height="96dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="TextSizeCheck">

        <RadioButton
            android:id="@+id/rdb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdBtn1" />

        <RadioButton
            android:id="@+id/rdb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdBtn2" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/cBox1"
        android:layout_width="80dp"
        android:layout_height="48dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="32dp"
        android:text="@string/cBox1"
        app:layout_constraintBottom_toTopOf="@+id/cBox2"
        app:layout_constraintStart_toStartOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/cBox2"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="41dp"
        android:text="@string/cBox2"
        app:layout_constraintBottom_toTopOf="@+id/txtResultado"
        app:layout_constraintEnd_toStartOf="@+id/cBox4"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/cBox3"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:text="@string/cBox3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        tools:ignore="TextSizeCheck" />

    <CheckBox
        android:id="@+id/cBox4"
        android:layout_width="89dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:text="@string/cBox4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cBox3" />

</androidx.constraintlayout.widget.ConstraintLayout>